# setmy.info

./: .gitignore  .gitmodules  .hgignore  Dockerfile  Jenkinsfile  LICENSE  Makefile  README  README.md  bitbucket-pipelines.yml  docker-compose.yml  pom.xml
.github/workflows/: maven-publish.yml
attic/gf-start-project/: jsTestDriver.conf
attic/springboot-start-project/: .gitignore  Dockerfile  LICENSE  pom.xml
collections/: build.properties  build.xml
dependencies-bom/: pom.xml
docker-centos/: Dockerfile  Makefile
docker-centos-java/: Dockerfile  Makefile
docker-centos-java-infinispan/: Dockerfile
docker-centos-java-infinispan/src/: infinispan-starter
docker-centos-java-tomcat/: Dockerfile  Makefile
docker-centos-java-zeebe/: Dockerfile  Makefile  README.md
docker-centos-nginx/: Dockerfile  Makefile
docker-centos-node/: Dockerfile  Makefile
docker-centos-node/src/: test
docker-images/: Makefile
docker-images/docker-centos/: Dockerfile  Makefile  build.sh
docker-images/docker-centos-java/: Dockerfile  Makefile  build.sh
docker-images/docker-centos-java-tomcat/: Dockerfile  Makefile  README.md  build.sh
docker-images/docker-centos-nginx/: Dockerfile  Makefile
docker-images/docker-centos-node/: Dockerfile  Makefile  build.sh
documentation/: .editorconfig  pom.xml
freebsd-ports/setmy-info-scripts/: Makefile  pkg-plist
gf-start-project/: .hgtags  README.txt  pom.xml
gf-start-project/gf-start-beans/: pom.xml
gf-start-project/gf-start-ear/: pom.xml
gf-start-project/gf-start-ejb/: pom.xml
gf-start-project/gf-start-helper/: pom.xml
gf-start-project/gf-start-swing/: pom.xml
gf-start-project/gf-start-web-app/: faces-config.NavData  pom.xml
gf-start-project/gf-start-ws/: pom.xml
groovy-models/: README.md  pom.xml
groovy-services/: README.md  bitbucket-pipelines.yml  pom.xml
incubation/: include.sh  test
incubation/activemq-artemis-maven-plugin/: .gitignore  .gitignore.rej  pom.xml  pom.xml.rej
incubation/setmy-info-scripts/: CMakeLists.txt  changelog  todo.txt  variables.txt
incubation/setmy-info-scripts/profiles/: gradle49.profile  jdk10.profile  node10.profile
incubation/setmy-info-scripts/resources/cmake/: install.txt  packaging.txt  variables.txt
incubation/setmy-info-scripts/resources/etc/profile.d/: example.sh
incubation/setmy-info-scripts/resources/in/: base.in  example.in  example.service  smi-location.in
incubation/setmy-info-scripts/resources/install/: post.install.sh  post.uninstall.sh  pre.install.sh
incubation/setmy-info-scripts/resources/man/: example.1
incubation/setmy-info-scripts/resources/profiles/: node.profile  node9.profile
incubation/setmy-info-scripts/resources/sh/: example.service
incubation/setmy-info-scripts/src/: example.service  post.uninstall.sh  smi-binary  smi-etc-location  smi-lib-location  smi-man-location  smi-version  un.install.sh
java-accounting/: pom.xml
java-ai/: .editorconfig  LICENSE  pom.xml  requirements-minimal.txt  requirements.txt
java-clojure/: .editorconfig  .gitignore  LICENSE  README.md  deps.edn  pom.xml  project.clj
java-communication/: pom.xml
java-crawler/: README.md  pom.xml
java-db/: pom.xml
java-document-db/: pom.xml
java-exec/: LICENSE  README.md  pom.xml
java-graph/: .gitignore  README.md  pom.xml
java-graph-db/: pom.xml
java-graphics/: LICENSE  pom.xml
java-hr/: pom.xml
java-indexing/: pom.xml
java-jwt-models/: pom.xml
java-lexer-parser/: README.md  pom.xml
java-linguistics/: .editorconfig  README.md  pom.xml
java-models/: README.md  pom.xml
java-modular-ssn/: pom.xml
java-postscript/: README.md  pom.xml
java-protocol/: .editorconfig  README.md  pom.xml
java-reports/: pom.xml
java-rest-client/: .LCKpom.xml~  pom.xml
java-scripting/: pom.xml
java-services/: README.md  pom.xml
java-stealer/: LICENSE  pom.xml
java-storage/: bitbucket-pipelines.yml  pom.xml
java-templates/: .editorconfig  LICENSE  pom.xml
java-tsd/: LICENSE  pom.xml
java-vcs/: pom.xml
java-web/: pom.xml
java-web-doc-format/: pom.xml
java-wf/: pom.xml
java-xblr/: pom.xml
jwt-models/: README.md  pom.xml
maven-plugin-start-project/: pom.xml
micronaut-start-project/: Dockerfile  Makefile  README.md  dependency-reduced-pom.xml  micronaut-cli.yml  pom.xml
node-start-project/: .dockerignore  .editorconfig  Dockerfile  app.js  karma.conf.js  package-lock.json  package.json  readme.txt  tsconfig.json
python-ai/: .editorconfig  .gitignore  README.md  install.jl  project  project.cmd  requirements-all-linux.txt  requirements-all-win.txt  requirements-minimal.txt  requirements.txt
python-start-project/: .project  Makefile
setmy-info-docker/: .gitignore  LICENSE  Makefile  README.md  build.sh  build.xml  docker-compose.yml
setmy-info-jail/: Makefile  README.md
setmy-info-scripts/: CMakeLists.txt  LICENSE  configure  setmy-info-scripts-0.6.0.noarch.7z  setmy-info-scripts-0.6.0.noarch.tar.Z  setmy-info-scripts-0.6.0.noarch.tar.bz2  setmy-info-scripts-0.6.0.noarch.tar.xz
setmy-info-scripts/resources/cmake/: packaging.txt  variables.txt
setmy-info-scripts/resources/etc/profile.d/: setmy-info.sh
setmy-info-scripts/resources/etc/systemd/system/: example.service
setmy-info-scripts/resources/in/: base.in
setmy-info-scripts/resources/install/: post.install.sh  post.uninstall.sh  pre.uninstall.sh
setmy-info-scripts/resources/profiles/: go112.profile  jdk12.profile  mvn33.profile  mvn36.profile  node11.15.profile
setmy-info-scripts/src/: smi  smi-base-path  smi-bin-location  smi-config  smi-etc-location  smi-localhost-location  smi-location  smi-net-location  smi-nics-location  smi-nodes-location  smi-provider  smi-services-location  smi-software  smi-tank-location  smi-var-location
springboot-start-project/: .dockerignore  .editorconfig  .gitignore  Dockerfile  Jailfile  Jenkinsfile  LICENSE  Makefile  README.md  play-book.yml  pom.xml
src/site/: site.xml
tomcat-start-project/: .bowerrc  .hgignore  Dockerfile  Jailfile  LICENSE  Makefile  README.md  build.bat  build.properties  build.sh  build.xml  pom.xml
(+2276 files in other folders)
