cmake_minimum_required (VERSION 3.12.1)

PROJECT (setmy-info-scripts)

SET (PROJECT_VERSION_MAJOR              0)
SET (PROJECT_VERSION_MINOR              7)
SET (PROJECT_VERSION_PATCH              0)
SET (PROJECT_VERSION_TWEAK              0)

SET (PROJECT_DESCRIPTION_SUMMARY        "setmy.info scripts")
SET (PROJECT_DESCRIPTION                "setmy.info scripts Installation Example")
SET (PROJECT_VENDOR                     "Hear And See Systems LLC")
SET (PROJECT_MAINTAINER                 "Imre Tabur <imre.tabur@eesti.ee>")
SET (PROJECT_WWW                        "https://setmy.info")
SET (PROJECT_LICENSE                    "MIT")

INCLUDE(./resources/cmake/variables.txt)

ADD_CUSTOM_TARGET(serviceScripts        cp ${RESOURCES_PATH}/in/*.service ${BINARY_OUTPUT_PATH})
ADD_CUSTOM_TARGET(setprofiles           cp -R ${RESOURCES_PATH}/profiles/* ${LIBRARY_OUTPUT_PATH}/profiles)
ADD_DEPENDENCIES(build setprofiles serviceScripts)
ADD_DEPENDENCIES(setprofiles dirs)
ADD_DEPENDENCIES(serviceScripts dirs)

CONFIGURE_FILE("${RESOURCES_PATH}/in/smi-location.in"   "${BINARY_OUTPUT_PATH}/smi-location")
CONFIGURE_FILE("${RESOURCES_PATH}/in/base.in"           "${LIBRARY_OUTPUT_PATH}/base.sh")

INSTALL(DIRECTORY "${LIBRARY_OUTPUT_PATH}/profiles"          DESTINATION lib)
INSTALL(FILES "${LIBRARY_OUTPUT_PATH}/base.sh"               DESTINATION lib)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/term"               DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-location"       DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-etc-location"   DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-lib-location"   DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-base-path"      DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-binary"         DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-test.bin"       DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-version"        DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-provider"       DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-var-location"   DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-tank-location"  DESTINATION bin)
INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-net-location"  DESTINATION bin)
#INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-xxxxxxxx"       DESTINATION bin)
#INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-xxxxxxxx"       DESTINATION bin)
#INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-xxxxxxxx"       DESTINATION bin)
#INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-xxxxxxxx"       DESTINATION bin)
#INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-xxxxxxxx"       DESTINATION bin)
#INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-xxxxxxxx"       DESTINATION bin)
#INSTALL(PROGRAMS  "${BINARY_OUTPUT_PATH}/smi-xxxxxxxx"       DESTINATION bin)

INCLUDE(./resources/cmake/install.txt)
INCLUDE(./resources/cmake/packaging.txt)
